# rust-multi-task-project

./: Cargo.toml
rust-cli-file-uploader/: Cargo.toml
rust-cli-file-uploader/src/: main.rs
rust-file-compression/compressor/: Cargo.toml
rust-file-compression/compressor/src/: lib.rs
rust-file-upload-endpoint/: Cargo.toml
rust-file-upload-endpoint/src/: lib.rs
rust-hello-server/: Cargo.toml
rust-hello-server/src/: main.rs
