[package]
name = "rust-hello-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-file-upload-endpoint = { path = "../rust-file-upload-endpoint" }  # Link to the other project
